# llm_engine

./: README.md  generation_step.py  llm_engine.py  pyproject.toml  requirements.txt
utils/: construct_prompt_folder.py
utils/construct_prompt_folder_utils/: convert_escaped_newlines_in_yaml.py  convert_json_to_yaml.py  convert_text_to_single_jsonl.py  make_dir_if_it_doesnt_exist_then_return_them.py
utils/llm_engine/: make_llama_cpp_async_api_call.py
