[project]
name = "llm_engine"
version = "0.1.0"
authors = [
    "Evan Armstrong <evanpeterarmstrong@gmail.com>",
    "Kyle Rose <kylemail1946@gmail.com>"
]
maintainers = [
    "Kyle Rose <kylemail1946@gmail.com>"
]
description = "The LLM Engine module provides a unified interface for interacting with various Language Model APIs and engines."
license = "MIT"
dependencies = [
    "cohere",
    "openai",
    "anthropic",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["llm_engine"]